bug in reference to js file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		
 	</div>
-	<script type = "text/javascript" src = "stopwatch.js"></script>
+	<script type = "text/javascript" src = "stopWatch.js"></script>
 	<script type = "text/javascript" src = "events.js"></script>
 </body>
 </html>
